--- a/flexget.yml
+++ b/flexget.yml
@@ -1,4 +1,4 @@
-#
+
 tasks:
 
   clean:
@@ -28,4 +28,4 @@ tasks:
       on_exit:        
         for_accepted: echo "{{title}}" >> /home/ryan/.flexget/sonarr.txt
         phase:
-          - cd /home/ryan/.flexget/ && git commit -m "update" && git push origin main
+          - cd /home/ryan/.flexget/ && git add sonarr.txt flexget.yml && git commit -m "update" && git push origin main
