--- a/flexget.yml
+++ b/flexget.yml
@@ -26,12 +26,16 @@ tasks:
     accept_all: yes
     exec:
       on_output:
+        #sonarr
         phase: echo . > /home/ryan/.flexget/sonarr.txt
       on_exit:        
         for_accepted: echo "{{title}}" >> /home/ryan/.flexget/sonarr.txt
         phase:
+          #prowlarr
           - curl -X GET "http://192.168.1.15:9696/api/v1/indexer?apikey=3280c963b81f412da16ddbc2f954ea2d" | grep definitionName > /home/ryan/.flexget/prowlarr.txt 
+          #calendarr
           - curl -X GET "http://192.168.1.15:8989/api/calendar?apikey=04afcfebb2aa42b3be62a3085ebde3da" | grep '"titleSlug"\|"airDate"' | sed 's/titleSlug/ /g' | sed 's/airDate/ /g' > /home/ryan/.flexget/calendar.txt
+          #github
           - cd /home/ryan/.flexget/ && git add *
           - cd /home/ryan/.flexget/ && git commit -m "update"
           - cd /home/ryan/.flexget/ && git push origin main
