--- a/config.yml
+++ b/config.yml
@@ -48,19 +48,13 @@ tasks:
             category: anime eng
             filter: all
             
-
   backup:
-    disable: seen
-    sonarr_list:
-      base_url: http://192.168.1.15
-      port: 8989
-      api_key: 04afcfebb2aa42b3be62a3085ebde3da
-    sort_by: title
     accept_all: yes
     exec:
       on_exit:        
         phase:
           #github
+          - cd /home/ryan/.flexget/ && git pull
           - cd /home/ryan/.flexget/ && git add *
           - cd /home/ryan/.flexget/ && git commit -m "update"
           - cd /home/ryan/.flexget/ && git push origin main
@@ -109,7 +103,7 @@ schedules:
   - tasks: ['series']
     schedule:
       minute: 0,30
-  - tasks: ['clean']   
+  - tasks: ['clean', 'backup']   
     schedule:
       hour: 0
   - tasks: ['series-search']
