--- a/series.yml
+++ b/series.yml
@@ -11,7 +11,6 @@ series:
     - Ms Marvel
     - The Old Man
     - Loot
-    - Only Murders in the building
     - She-Hulk Attorney at Law
     - Andor
     - Paper Girls
@@ -39,6 +38,7 @@ series:
     - Mr Mayor
     - Night Sky
     - Obi-Wan Kenobi
+    - Only murders in the building
     - Outer Range
     - Resident Alien
     - Sanditon
