--- a/series.yml
+++ b/series.yml
@@ -11,6 +11,7 @@ series:
     - Ms Marvel
     - The Old Man
     - Loot
+    - Only Murders in the building
     - She-Hulk Attorney at Law
     - Andor
     - Paper Girls
@@ -38,7 +39,6 @@ series:
     - Mr Mayor
     - Night Sky
     - Obi-Wan Kenobi
-    - Only murders in the building
     - Outer Range
     - Resident Alien
     - Sanditon
