--- a/config.yml
+++ b/config.yml
@@ -52,11 +52,25 @@ tasks:
     domain_delay:
       nyaa: 3 seconds
       limetorrents: 3 seconds
+      thepiratebay.se: 10 seconds
+      thepiratebay.org: 10 seconds
+      anidex.info: 3 seconds
+      bt-chat.com: 1 seconds
+      ezrss.it: 1 seconds
+      showrss.info: 2 seconds
+      torlock.eu: 1 seconds
+      torrenticity.com: 1 seconds
+      zooqle.com: 2 seconds
     inputs:
       - rss: { url: 'https://eztv.re/ezrss.xml', silent: yes }
+      - rss: { url: 'https://eztv.it/ezrss.xml', other_fields: ['torrent:magnetURI'], link: 'torrent:magnetURI', silent: yes }
       - rss: { url: 'https://www.limetorrents.info/rss/20/', silent: yes }
       - rss: { url: 'https://torrentgalaxy.to/rss?cat=41', silent: yes }
       - rss: { url: 'https://nyaa.si/?page=rss&c=1_2', silent: yes }
+      - rss: { url: 'https://rarbg.to/rssdd.php?category=1;18;41;49', silent: yes }
+      - rss: 
+          url: https://zooqle.com/search?q=%2A+category%3ATV&fmt=rss
+          title: 'torrent:fileName'      
     transmission:
       host: 192.168.1.15
       port: 9091
@@ -94,6 +108,7 @@ tasks:
         - nyaa:
             category: anime eng
             filter: all
+        - search_rss: https://torrentz2.eu/feed?f=\{{search_term}}
     transmission:
       host: 192.168.1.15
       port: 9091
