--- a/series.yml
+++ b/series.yml
@@ -23,8 +23,7 @@ series:
     - Call the Midwife
     - Comedians in Cars Getting Coffee
     - Doc Martin
-    - Doctor Who 2005:
-         begin: s13e07
+    - Doctor Who 2005
     - Documentary Now
     - Endeavour
     - Fargo
@@ -59,8 +58,7 @@ series:
     - The Other One
     - The Rookie
     - The Wonder Years 2021
-    - The Yorkshire Vet:
-         begin: s13e01
+    - The Yorkshire Vet
     - Travel Man 48 Hours in
     - Trying
     - Undone
