--- a/config.yml
+++ b/config.yml
@@ -37,6 +37,7 @@ tasks:
         for_accepted:
           - /usr/local/bin/cleanvid -i "{{location}}" -o "{{location}}_clean.mkv" -w /home/ryan/swears.txt -e > /dev/null 2>&1
           - if [ -f "{{location}}_clean.mkv" ]; then rm "{{location}}"; else echo "nothing to clean"; fi > /dev/null 2>&1
+          - echo {{title}} >> /home/ryan/.flexget/history.txt
       on_exit:
         phase: find "/home/ryan/completed/"* -type d -empty -delete       
 
@@ -144,3 +145,14 @@ tasks:
     exec:
       on_exit:
         phase: find /home/ryan/media/ -name "*.srt" -type f -delete > /dev/null 2>&1
+
+  test:
+    priority: 3
+    manual: yes
+    include: series.yml
+    accept_all: yes
+    list_add:
+      - trakt_list:
+          account: thetinyking
+          list: series
+          type: shows
