--- a/series.yml
+++ b/series.yml
@@ -47,6 +47,7 @@ series:
     - Star Trek Picard
     - Star Trek Strange New Worlds
     - Stranger Things
+    - Superman and Lois
     - Ted Lasso
     - Tehran
     - The Book of Boba Fett
