--- a/series.yml
+++ b/series.yml
@@ -22,6 +22,8 @@ series:
     - Bobs Burgers
     - Call the Midwife
     - Comedians in Cars Getting Coffee
+    - Deadliest Catch:
+        begin: s13e05
     - Doc Martin
     - Doctor Who 2005
     - Documentary Now
