--- a/series.yml
+++ b/series.yml
@@ -22,10 +22,9 @@ series:
     - Bobs Burgers
     - Call the Midwife
     - Comedians in Cars Getting Coffee
-    - Deadliest Catch:
-        begin: s18e05
     - Doc Martin
-    - Doctor Who 2005
+    - Doctor Who 2005:
+         begin: s13e07
     - Documentary Now
     - Endeavour
     - Fargo
@@ -49,7 +48,6 @@ series:
     - Star Trek Picard
     - Star Trek Strange New Worlds
     - Stranger Things
-    - Superman and Lois
     - Ted Lasso
     - Tehran
     - The Book of Boba Fett
@@ -61,7 +59,8 @@ series:
     - The Other One
     - The Rookie
     - The Wonder Years 2021
-    - The Yorkshire Vet
+    - The Yorkshire Vet:
+         begin: s13e01
     - Travel Man 48 Hours in
     - Trying
     - Undone
