--- a/series.yml
+++ b/series.yml
@@ -22,9 +22,10 @@ series:
     - Bobs Burgers
     - Call the Midwife
     - Comedians in Cars Getting Coffee
+    - Deadliest Catch:
+        begin: s18e05
     - Doc Martin
-    - Doctor Who 2005:
-         begin: s13e07
+    - Doctor Who 2005
     - Documentary Now
     - Endeavour
     - Fargo
@@ -48,6 +49,7 @@ series:
     - Star Trek Picard
     - Star Trek Strange New Worlds
     - Stranger Things
+    - Superman and Lois
     - Ted Lasso
     - Tehran
     - The Book of Boba Fett
@@ -59,8 +61,7 @@ series:
     - The Other One
     - The Rookie
     - The Wonder Years 2021
-    - The Yorkshire Vet:
-         begin: s13e01
+    - The Yorkshire Vet
     - Travel Man 48 Hours in
     - Trying
     - Undone
@@ -91,8 +92,3 @@ series:
 #    - Victoria
 #    - The Expanse
 #    - This Is Us
-
-
-
-
-
