--- a/config.yml
+++ b/config.yml
@@ -1,5 +1,16 @@
 tasks:
 
+  backup:
+    priority: 1
+    accept_all: yes
+    exec:
+      on_exit:        
+        phase:
+          - cd /home/ryan/.flexget/ && git pull > /dev/null 2>&1
+          - cd /home/ryan/.flexget/ && git add history.txt > /dev/null 2>&1
+          - cd /home/ryan/.flexget/ && git commit -m "update" > /dev/null 2>&1
+          - cd /home/ryan/.flexget/ && git push origin main > /dev/null 2>&1
+
   clean:
     priority: 1
     filesystem:
@@ -13,6 +24,7 @@ tasks:
         for_accepted:
           - /usr/local/bin/cleanvid -i "{{location}}" -o "{{location}}_clean.mkv" -w /home/ryan/swears.txt -e
           - if [ -f "{{location}}_clean.mkv" ]; then rm "{{location}}"; else echo "nothing to clean"; fi
+          - sed -i '1 i\{{title}}' /home/ryan/.flexget/history.txt
 
   showrss:
     priority: 2
@@ -24,14 +36,13 @@ tasks:
       main_file_only: yes
       username: transmission
       password: transmission
-      path: "/data/media/"
+      path: "/data/media"
 
   otherrss:
     priority: 3
     include: series.yml
     inputs:
       - rss: { url: 'https://eztv.re/ezrss.xml', silent: yes }
-      - rss: { url: 'https://eztv.it/ezrss.xml', other_fields: ['torrent:magnetURI'], link: 'torrent:magnetURI', silent: yes }
       - rss: { url: 'https://www.limetorrents.info/rss/20/', silent: yes }
       - rss: { url: 'https://torrentgalaxy.to/rss?cat=41', silent: yes }
       - rss: { url: 'https://nyaa.si/?page=rss&c=1_2', silent: yes }
@@ -42,11 +53,11 @@ tasks:
       main_file_only: yes
       username: transmission
       password: transmission
-      path: "/data/media/"
+      path: "/data/media"
 
   cleanup:
     priority: 5
-    delay: 3 days
+    delay: 23 hours
     disable:
       - seen
       - seen_info_hash
