--- a/series.yml
+++ b/series.yml
@@ -15,6 +15,10 @@ series:
     - The Other One
     - The Yorkshire Vet
     - Trying
+    - The Cabin Chronicles
+    - Where We Call Home
+    - Inn The Works
+    - The Lost Kitchen
   
     - Loot
     - She-Hulk Attorney at Law
