--- a/config.yml
+++ b/config.yml
@@ -7,7 +7,7 @@ tasks:
       on_exit:        
         phase:
           - cd /home/pi/.flexget/ && git pull > /dev/null 2>&1
-          - cd /home/pi/.flexget/ && git add history.txt movies.txt > /dev/null 2>&1
+          - cd /home/pi/.flexget/ && git add history.txt > /dev/null 2>&1
           - cd /home/pi/.flexget/ && git commit -m "update" > /dev/null 2>&1
           - cd /home/pi/.flexget/ && git push origin main > /dev/null 2>&1
 
@@ -72,6 +72,9 @@ tasks:
         phase:
           - xargs -0 -n 1 flexget movie-list add < <(tr \\n \\0 </home/pi/.flexget/movies.txt)
           - > /home/pi/.flexget/movies.txt
+          - cd /home/pi/.flexget/ && git add movies.txt > /dev/null 2>&1
+          - cd /home/pi/.flexget/ && git commit -m "update" > /dev/null 2>&1
+          - cd /home/pi/.flexget/ && git push origin main > /dev/null 2>&1
         
   download-movies:
     priority: 6
